Use template Renderer for display information about Enterprise